yamls/ingress-demo/ingress-resource-dash.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-dash
spec:
  ingressClassName: nginx
  rules:
  - host: dash.apps.cacttus.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 443
