yamls/ingress-demo/ingress-resource-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-grafana
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.ks1.cacttus.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prom-stack-grafana
            port: 
              number: 80
