yamls/ingress-demo/ingress-resource-loki.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-loki
spec:
  ingressClassName: nginx
  rules:
  - host: loki.apps.cloudmetal.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki
            port: 
              number: 3100
