yamls/ingress-demo/ingress-resource-longhorn.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-longhorn
spec:
  ingressClassName: nginx
  rules:
  - host: pv.kube.cloudmetal.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port: 
              number: 80
