yamls/ingress-demo/ingress-resource-movie.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-movie
spec:
  ingressClassName: nginx
  rules:
  - host: movie.ks1.cacttus.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: movies-service
            port: 
              number: 80
